tests/neg/parser-stability-11.scala
package x0 {
case class x0  // error // error
}
package x0
class x0  // error
// error
